Change page title style

--- a/posts.html
+++ b/posts.html
@@ -1,8 +1,8 @@
 ---
 layout: post-index
 permalink: /posts/
-title: All Posts
-description: "An archive of posts."
+title: 时光轴
+description: "按时间归类日志."
 ---
 
 {% for post in site.posts %}
