--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 ---
 layout: post-index
-title: Latest Posts
-description: "Describe this nonsense."
-tags: [Jekyll, theme, themes, responsive, blog, modern]
+title: 最新日志
+description: "记录心情的点滴."
+tags: [adome, aidistan, blog]
 image:
-  feature: abstract-1.jpg
+  feature: abstract-3.jpg
   credit: dargadgetz
   creditlink: http://www.dargadgetz.com/ios-7-abstract-wallpaper-pack-for-iphone-5-and-ipod-touch-retina/
 ---
@@ -37,12 +37,12 @@ image:
 <div class="pagination">
   {% if paginator.previous_page %}
     {% if paginator.previous_page == 1 %}
-      <a href="{{ site.url }}" class="btn">Previous</a>
+      <a href="{{ site.url }}" class="btn">上一页</a>
     {% else %}
-      <a href="{{ site.url }}/page{{ paginator.previous_page }}" class="btn">Previous</a>
+      <a href="{{ site.url }}/page{{ paginator.previous_page }}" class="btn">上一页</a>
     {% endif %}
   {% else %}
-    Previous
+    上一页
   {% endif %}
   <ul class="inline-list">
     <li>
@@ -63,8 +63,8 @@ image:
     {% endfor %}
   </ul>
   {% if paginator.next_page %}
-    <a href="{{ site.url }}/page{{ paginator.next_page }}" class="btn">Next</a>
+    <a href="{{ site.url }}/page{{ paginator.next_page }}" class="btn">下一页</a>
   {% else %}
-    Next
+    下一页
   {% endif %}
 </div><!-- /.pagination -->
