--- a/tags.html
+++ b/tags.html
@@ -1,8 +1,8 @@
 ---
 layout: post-index
 permalink: /tags/
-title: Tag Archive
-description: "An archive of posts sorted by tag."
+title: 标签页
+description: "按标签归类日志."
 ---
 
 {% capture site_tags %}{% for tag in site.tags %}{{ tag | first }}{% unless forloop.last %},{% endunless %}{% endfor %}{% endcapture %}
