--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@ title: 最新日志
 description: "记录心情的点滴."
 tags: [adome, aidistan, blog]
 image:
-  feature: abstract-3.jpg
-  credit: dargadgetz
-  creditlink: http://www.dargadgetz.com/ios-7-abstract-wallpaper-pack-for-iphone-5-and-ipod-touch-retina/
+  feature: covers/2014-07-03.jpg
+  credit: 海盐南北湖
+  creditlink: http://www.nbh.com.cn/
 ---
 
 {% for post in paginator.posts %}
