--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@ title: 最新日志
 description: "记录心情的点滴."
 tags: [adome, aidistan, blog]
 image:
-  feature: covers/2014-07-03.jpg
-  credit: 海盐南北湖
-  creditlink: http://www.nbh.com.cn/
+  feature: 2014/0911.jpg
+  credit: 北京潭拓寺
+  creditlink: 
 ---
 
 {% for post in paginator.posts %}
