Image credit staffs

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@ title:
 description: "记录心情的点滴."
 image:
   feature: 2014/0911.jpg
-  credit: 北京潭拓寺
-  creditlink: 
+  credit: Aidi Stan
+  creditlink: http://aidistan.net/adome/2014/09/11/tan-tuo-si/
 ---
 
 {% for post in paginator.posts %}
