--- a/index.html
+++ b/index.html
@@ -28,19 +28,17 @@ image:
 <div class="pagination">
   {% if paginator.previous_page %}
     {% if paginator.previous_page == 1 %}
-      <a href="{{ site.baseurl }}" class="btn">上一页</a>
+      <a href="{{ site.baseurl }}/" class="btn">上一页</a>
     {% else %}
       <a href="{{ site.baseurl }}/page{{ paginator.previous_page }}" class="btn">上一页</a>
     {% endif %}
-  {% else %}
-    上一页
   {% endif %}
   <ul class="inline-list">
     <li>
       {% if paginator.page == 1 %}
         <span class="current-page">1</span>
       {% else %}
-        <a href="{{ site.baseurl }}">1</a>
+        <a href="{{ site.baseurl }}/">1</a>
       {% endif %}
     </li>
     {% for count in (2..paginator.total_pages) %}
@@ -55,7 +53,5 @@ image:
   </ul>
   {% if paginator.next_page %}
     <a href="{{ site.baseurl }}/page{{ paginator.next_page }}" class="btn">下一页</a>
-  {% else %}
-    下一页
   {% endif %}
 </div><!-- /.pagination -->
