Add a new cover

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@ layout: page
 title:
 description: "记录心情的点滴."
 image:
-  feature: 2014/0911.jpg
-  credit: Aidi Stan
-  creditlink: http://aidistan.net/adome/2014/09/11/tan-tuo-si/
+  feature: covers/20141203.jpg
+  credit: 金山岭长城
+  creditlink: 
 ---
 
 {% for post in paginator.posts %}
