Hide a poem inside descriptions

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 ---
 layout: page
 title:
-description: "记录心情的点滴."
+description: '定风波'
 image:
   feature: covers/20141203.jpg
   credit: 金山岭长城
-  creditlink: 
+  creditlink:
 ---
 
 {% for post in paginator.posts %}
