--- a/tags.html
+++ b/tags.html
@@ -2,7 +2,7 @@
 layout: page
 permalink: /tags/
 title: 标签
-description: "按标签归类日志"
+description: 竹杖芒鞋轻胜马
 ---
 
 {% capture site_tags %}{% for tag in site.tags %}{{ tag | first }}{% unless forloop.last %},{% endunless %}{% endfor %}{% endcapture %}
