--- a/404.html
+++ b/404.html
@@ -1,9 +1,13 @@
 ---
 layout: page
 permalink: /404.html
-title: "很抱歉，您要访问的页面不存在..."
-description: "Page not found."
+title: 找不着页面
+description: "哎呀呀，快返回主页吧～"
 ---
 
-<iframe scrolling='no' frameborder='0' src='http://yibo.iyiyun.com/Home/Distribute/ad404/key/3404' width='655' height='390' style='display:block; margin: 0 auto;'>
-</iframe>
+<div data-full-stretched>
+  <iframe scrolling='no' frameborder='0'
+          src='http://yibo.iyiyun.com/Home/Distribute/ad404/key/165180'
+          width='654' height='470' style='display:block; margin: 0 auto;'>
+  </iframe>
+</div>
