Decrease the size of tag buttons

--- a/tags.html
+++ b/tags.html
@@ -11,7 +11,7 @@ description: 竹杖芒鞋轻胜马
 
 <div class="am-g am-padding-sm am-margin-bottom-lg">
   {% for tag in site_tags %}
-  <a href="#{{ tag }}" class="am-btn am-btn-default am-round am-margin-bottom-sm" data-am-smooth-scroll>
+  <a href="#{{ tag }}" class="am-btn am-btn-default am-btn-sm am-round am-margin-bottom-sm" data-am-smooth-scroll>
     {{ tag }} <sup>{{ site.tags[tag].size }}</sup>
   </a>
   {% endfor %}
