Improve credit links

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@ title:
 description: '定风波'
 image:
   feature: covers/20141203.jpg
-  credit: 金山岭长城
-  creditlink:
+  credit: Aidi Stan
 ---
 
 {% for post in paginator.posts %}
