--- a/about.html
+++ b/about.html
@@ -6,25 +6,21 @@ description: 也无风雨也无晴
 comments: page-about
 ---
 
-<div id="about-me" class="am-g am-margin-xl am-link-muted">
-  <div class="am-u-sm-3 am-text-center">
-    <a title="Adome-Photo" href="http://photo.aidistan.net" target="_blank">
-      <span class="am-icon-camera"></span>
-    </a>
-  </div>
-  <div class="am-u-sm-3 am-text-center">
-    <a title="Github" href="https://github.com/aidistan" target="_blank">
-      <span class="am-icon-github"></span>
-    </a>
-  </div>
-  <div class="am-u-sm-3 am-text-center">
-    <a title="GuruDigger" href="http://gurudigger.com/users/aidistan/" target="_blank">
-      <img src="http://gurudigger.com/uploads/image/image/1075/17f40f51-fd67-4771-a495-e8e2ac91fa50.png"></img>
-    </a>
-  </div>
-  <div class="am-u-sm-3 am-text-center">
-    <a title="ResearchGate" href="https://www.researchgate.net/profile/Aidi_Tan" target="_blank">
-      <img src="http://www.researchgate.net/apple-touch-icon.png"></img>
-    </a>
-  </div>
-</div>
+<ul id="about-me" class="am-list am-link-muted am-list-border">
+  <li><a title="Adome-Photo" href="http://photo.aidistan.net" target="_blank">
+    <i class="am-icon-camera"></i>
+    Lofter
+  </a></li>
+  <li><a title="Github" href="https://github.com/aidistan" target="_blank">
+    <i class="am-icon-github"></i>
+    Github
+  </a></li>
+  <li><a title="GuruDigger" href="http://gurudigger.com/users/aidistan/" target="_blank">
+    <i><img src="http://gurudigger.com/uploads/image/image/1075/17f40f51-fd67-4771-a495-e8e2ac91fa50.png"></img></i>
+    GuruDigger
+  </a></li>
+  <li><a title="ResearchGate" href="https://www.researchgate.net/profile/Aidi_Tan" target="_blank">
+    <i><img src="http://www.researchgate.net/apple-touch-icon.png"></img></i>
+    ResearchGate
+  </a></li>
+</ul>
