--- a/about.html
+++ b/about.html
@@ -6,21 +6,66 @@ description: 也无风雨也无晴
 comments: page-about
 ---
 
-<ul id="about-me" class="am-list am-link-muted am-list-border">
-  <li><a title="Adome-Photo" href="http://photo.aidistan.net" target="_blank">
-    <i class="am-icon-camera"></i>
-    Lofter
-  </a></li>
-  <li><a title="Github" href="https://github.com/aidistan" target="_blank">
-    <i class="am-icon-github"></i>
-    Github
-  </a></li>
-  <li><a title="GuruDigger" href="http://gurudigger.com/users/aidistan/" target="_blank">
-    <i><img src="http://gurudigger.com/uploads/image/image/1075/17f40f51-fd67-4771-a495-e8e2ac91fa50.png"></img></i>
-    GuruDigger
-  </a></li>
-  <li><a title="ResearchGate" href="https://www.researchgate.net/profile/Aidi_Tan" target="_blank">
-    <i><img src="http://www.researchgate.net/apple-touch-icon.png"></img></i>
-    ResearchGate
-  </a></li>
-</ul>
+<h1>信念</h1>
+
+<div class="am-g">
+  <div class="am-u-sm-4 am-text-center am-text-xxl am-text-primary">Cool</div>
+  <div class="am-u-sm-4 am-text-center am-text-xxl am-text-danger">Passion</div>
+  <div class="am-u-sm-4 am-text-center am-text-xxl">Firm</div>
+</div>
+
+<h1>作品</h1>
+
+<section class='am-accordion am-accordion-gapped' data-am-widget='accordion' data-am-accordion='{}'>
+  <dl class='am-accordion-item'>
+    <dt class='am-accordion-title'>作为 <strong class='am-text-primary'>当代魔法师</strong></dt>
+    <dd class='am-accordion-bd am-collapse'>
+      <div class='am-accordion-content'>
+        内容准备中...
+      </div>
+    </dd>
+  </dl>
+
+  <dl class='am-accordion-item'>
+    <dt class='am-accordion-title'>作为 <strong class='am-text-danger'>美的发现者</strong></dt>
+    <dd class='am-accordion-bd am-collapse'>
+      <div class='am-accordion-content'>
+        内容准备中...
+      </div>
+    </dd>
+  </dl>
+
+  <dl class='am-accordion-item'>
+    <dt class='am-accordion-title'>作为 <strong class='am-text-success'>乐器演奏者</strong></dt>
+    <dd class='am-accordion-bd am-collapse'>
+      <div class='am-accordion-content'>
+        内容准备中...
+      </div>
+    </dd>
+  </dl>
+</section>
+
+<h1>更多</h1>
+
+<div id="about-me" class="am-g am-margin-xl am-link-muted">
+  <div class="am-u-sm-3 am-text-center">
+    <a title="Lofter" href="http://photo.aidistan.net" target="_blank">
+      <img src="/assets/images/lofter.jpg"></img>
+    </a>
+  </div>
+  <div class="am-u-sm-3 am-text-center">
+    <a title="Github" href="https://github.com/aidistan" target="_blank">
+      <i class="am-icon-github"></i>
+    </a>
+  </div>
+  <div class="am-u-sm-3 am-text-center">
+    <a title="GuruDigger" href="http://gurudigger.com/users/aidistan/" target="_blank">
+      <img src="http://gurudigger.com/uploads/image/image/1075/17f40f51-fd67-4771-a495-e8e2ac91fa50.png"></img>
+    </a>
+  </div>
+  <div class="am-u-sm-3 am-text-center">
+    <a title="ResearchGate" href="https://www.researchgate.net/profile/Aidi_Tan" target="_blank">
+      <img src="http://www.researchgate.net/apple-touch-icon.png"></img>
+    </a>
+  </div>
+</div>
