--- a/about.html
+++ b/about.html
@@ -6,25 +6,35 @@ description: 也无风雨也无晴
 comments: page-about
 ---
 
-<div id="about-me" class="am-g am-margin-xl am-link-muted">
-  <div class="am-u-sm-3 am-text-center">
-    <a title="Lofter" href="http://photo.aidistan.net" target="_blank">
-      <img src="/assets/images/lofter.jpg"></img>
-    </a>
+<div id="about-me" class="am-link-muted">
+  <div class="am-g am-padding">
+    <div class="am-u-sm-3 am-text-center">
+      <a title="Gallery" href="/gallery/">
+        <i class="am-icon-th-large"></i>
+      </a>
+    </div>
   </div>
-  <div class="am-u-sm-3 am-text-center">
-    <a title="Github" href="https://github.com/aidistan" target="_blank">
-      <i class="am-icon-github"></i>
-    </a>
-  </div>
-  <div class="am-u-sm-3 am-text-center">
-    <a title="GuruDigger" href="http://gurudigger.com/users/aidistan/" target="_blank">
-      <img src="http://gurudigger.com/uploads/image/image/1075/17f40f51-fd67-4771-a495-e8e2ac91fa50.png"></img>
-    </a>
-  </div>
-  <div class="am-u-sm-3 am-text-center">
-    <a title="ResearchGate" href="https://www.researchgate.net/profile/Aidi_Tan" target="_blank">
-      <img src="http://www.researchgate.net/apple-touch-icon.png"></img>
-    </a>
+
+  <div class="am-g am-padding">
+    <div class="am-u-sm-3 am-text-center">
+      <a title="Lofter" href="http://photo.aidistan.net" target="_blank">
+        <img src="/assets/images/lofter.jpg"></img>
+      </a>
+    </div>
+    <div class="am-u-sm-3 am-text-center">
+      <a title="Github" href="https://github.com/aidistan" target="_blank">
+        <i class="am-icon-github"></i>
+      </a>
+    </div>
+    <div class="am-u-sm-3 am-text-center">
+      <a title="GuruDigger" href="http://gurudigger.com/users/aidistan/" target="_blank">
+        <img src="http://gurudigger.com/uploads/image/image/1075/17f40f51-fd67-4771-a495-e8e2ac91fa50.png"></img>
+      </a>
+    </div>
+    <div class="am-u-sm-3 am-text-center">
+      <a title="ResearchGate" href="https://www.researchgate.net/profile/Aidi_Tan" target="_blank">
+        <img src="http://www.researchgate.net/apple-touch-icon.png"></img>
+      </a>
+    </div>
   </div>
 </div>
