--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: page
 title:
 description: '定风波'
 image:
-  feature: covers/20141203.jpg
+  feature: 2015/0620.jpg
   credit: Aidi Stan
 ---
 
