Update part of remained notes

--- a/notes.html
+++ b/notes.html
@@ -2,5 +2,5 @@
 layout: note-index
 permalink: /notes/
 title: 笔记
-description: Notebook based on HTML5. Just for fun!
+description: Another Notebook for HTML5
 ---
