--- a/index.html
+++ b/index.html
@@ -24,15 +24,16 @@ image:
 <hr class="am-article-divider" />
 
 <ul class="am-pagination am-pagination-centered">
-  {% if paginator.previous_page %}
-    {% if paginator.previous_page == 1 %}
-  <li class="am-pagination-prev"><a href="{{ site.baseurl }}/"><span class="am-icon-angle-double-left"></span></a></li>
-    {% else %}
-  <li class="am-pagination-prev"><a href="{{ site.baseurl }}/page{{ paginator.previous_page }}/"><span class="am-icon-angle-double-left"></span></a></li>
-    {% endif %}
-  {% else %}
-  <li class="am-pagination-prev am-disabled"><a href="#"><span class="am-icon-angle-double-left"></span></a></li>
-  {% endif %}
+  <li class="am-pagination-prev {% if paginator.previous_page == null %}am-disabled{% endif %}">
+    <a href="{{ site.baseurl }}/">
+      <span class="am-icon-angle-double-left"></span>
+    </a>
+  </li>
+  <li class="am-pagination-prev {% if paginator.previous_page == null %}am-disabled{% endif %}">
+    <a href="{{ site.baseurl }}/{% if paginator.previous_page > 1 %}page{{ paginator.previous_page }}/{% endif %}">
+      <span class="am-icon-angle-left"></span>
+    </a>
+  </li>
 
   {% for count in (1..paginator.total_pages) %}
   <li{% if count == paginator.page %} class="am-active"{% endif %}>
@@ -40,9 +41,14 @@ image:
   </li>
   {% endfor %}
 
-  {% if paginator.next_page %}
-  <li class="am-pagination-next"><a href="{{ site.baseurl }}/page{{ paginator.next_page }}"><span class="am-icon-angle-double-right"></span></a></li>
-  {% else %}
-  <li class="am-pagination-next am-disabled"><a href="#"><span class="am-icon-angle-double-right"></span></a></li>
-  {% endif %}
+  <li class="am-pagination-next {% if paginator.next_page == null %}am-disabled{% endif %}">
+    <a href="{{ site.baseurl }}/page{{ paginator.total_pages }}">
+      <span class="am-icon-angle-double-right"></span>
+    </a>
+  </li>
+  <li class="am-pagination-next {% if paginator.next_page == null %}am-disabled{% endif %}">
+    <a href="{{ site.baseurl }}/page{% if paginator.next_page %}{{ paginator.next_page }}{% else %}{{ paginator.total_pages }}{% endif %}" style="margin-bottom: 5px; margin-right: 5px;">
+      <span class="am-icon-angle-right"></span>
+    </a>
+  </li>
 </ul>
