--- a/about.html
+++ b/about.html
@@ -5,3 +5,24 @@ title: 留言
 description: 也无风雨也无晴
 comments: page-about
 ---
+
+<style>
+  #about .am-icon-btn {
+    font-size: 48px;
+    line-height: 72px;
+    width: 72px;
+    height: 72px;
+  }
+
+  .am-icon-btn.am-black {
+    color: #333;
+    background-color: #eee;
+  }
+</style>
+
+<ul id="about" class="am-avg-sm-4 am-text-center">
+  <li class="am-padding"><a href="mailto:aidistan@live.cn" target="_blank" class="am-icon-btn am-icon-envelope am-secondary"></a></li>
+  <li class="am-padding"><a href="http://weibo.com/aidistan" target="_blank" class="am-icon-btn am-icon-weibo am-danger"></a></li>
+  <li class="am-padding"><a href="http://photo.aidistan.net" target="_blank" class="am-icon-btn am-icon-photo am-primary"></a></li>
+  <li class="am-padding"><a href="https://github.com/aidistan" target="_blank" class="am-icon-btn am-icon-github-alt am-black"></a></li>
+</ul>
