--- a/notes.html
+++ b/notes.html
@@ -2,5 +2,5 @@
 layout: note-index
 permalink: /notes/
 title: 笔记
-description: Another Notebook for HTML5
+description: A Notebook other than Evernote
 ---
