--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@ comments: page-about
 ---
 
 <style>
-  #about .am-icon-btn {
+  li .am-icon-btn {
     font-size: 48px;
     line-height: 72px;
     width: 72px;
@@ -20,11 +20,16 @@ comments: page-about
   }
 </style>
 
-<ul id="about" class="am-avg-sm-3 am-text-center">
+<ul class="am-avg-sm-3 am-text-center">
+  <li class="am-padding"><a href="/notes/" class="am-icon-btn am-icon-sticky-note-o"></a></li>
+</ul>
+
+<hr/>
+
+<ul class="am-avg-sm-3 am-text-center">
   <li class="am-padding"><a href="mailto:aidistan@live.cn" target="_blank" class="am-icon-btn am-icon-envelope am-secondary"></a></li>
   <li class="am-padding"><a href="http://weibo.com/aidistan" target="_blank" class="am-icon-btn am-icon-weibo am-danger"></a></li>
   <li class="am-padding"><a href="http://photo.aidistan.net" target="_blank" class="am-icon-btn am-icon-photo am-primary"></a></li>
-  <!-- <li class="am-padding"><a href="https://github.com/aidistan" target="_blank" class="am-icon-btn am-icon-github-alt am-black"></a></li> -->
 </ul>
 
 <hr/>
