Update the banner

--- a/index.html
+++ b/index.html
@@ -1,10 +1,7 @@
 ---
 layout: page
 title:
-description: '定风波'
-image:
-  feature: covers/20151105.jpg
-  credit: Aidi Stan
+description: 竹杖芒鞋轻胜马
 ---
 
 {% for post in paginator.posts %}
