--- a/tags.html
+++ b/tags.html
@@ -2,7 +2,7 @@
 layout: page
 permalink: /tags/
 title: 标签
-description: 竹杖芒鞋轻胜马
+description: 一蓑烟雨任平生
 ---
 
 <!-- Convert site.tags into an array -->
