--- a/about.html
+++ b/about.html
@@ -21,20 +21,21 @@ comments: page-about
 </style>
 
 <ul class="am-avg-sm-3 am-text-center">
-  <li class="am-padding"><a href="/notes/" class="am-icon-btn am-icon-sticky-note-o"></a></li>
+  <li class="am-padding"><a href="/gallery/" class="am-icon-btn am-icon-paint-brush"></a></li>
+  <li class="am-padding"><a href="/notes/" class="am-icon-btn am-icon-pencil"></a></li>
 </ul>
 
 <hr/>
 
 <ul class="am-avg-sm-3 am-text-center">
-  <li class="am-padding"><a href="mailto:aidistan@live.cn" target="_blank" class="am-icon-btn am-icon-envelope am-secondary"></a></li>
+  <li class="am-padding"><a href="http://photo.aiditan.me" target="_blank" class="am-icon-btn am-icon-photo am-primary"></a></li>
   <li class="am-padding"><a href="http://weibo.com/aidistan" target="_blank" class="am-icon-btn am-icon-weibo am-danger"></a></li>
-  <li class="am-padding"><a href="http://photo.aidistan.net" target="_blank" class="am-icon-btn am-icon-photo am-primary"></a></li>
+  <li class="am-padding"><a href="https://github.com/aidistan" target="_blank" class="am-icon-btn am-icon-github am-black"></a></li>
 </ul>
 
 <hr/>
 
-<a href="https://github.com/aidistan" class="github-corner">
+<a href="https://github.com/aidistan/blog" target="_blank" class="github-corner">
   <svg width="80px" height="80px" viewBox="0 0 250 250" style="fill:#151513; color:#fff; position: absolute; top: 0; border: 0; right: 0;">
     <path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path>
     <path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path>
