--- a/about.html
+++ b/about.html
@@ -20,6 +20,13 @@ comments: page-about
   }
 </style>
 
+<p>
+  <b>为什么会有这个博客？</b><br/>
+  为了记录自己的所思、所想、所感，并与大家分享。
+</p>
+
+<hr/>
+
 <ul class="am-avg-sm-3 am-text-center">
   <li class="am-padding"><a href="/gallery/" class="am-icon-btn am-icon-paint-brush"></a></li>
   <li class="am-padding"><a href="/notes/" class="am-icon-btn am-icon-pencil"></a></li>
@@ -27,15 +34,7 @@ comments: page-about
 
 <hr/>
 
-<ul class="am-avg-sm-3 am-text-center">
-  <li class="am-padding"><a href="http://photo.aiditan.me" target="_blank" class="am-icon-btn am-icon-photo am-primary"></a></li>
-  <li class="am-padding"><a href="http://weibo.com/aidistan" target="_blank" class="am-icon-btn am-icon-weibo am-danger"></a></li>
-  <li class="am-padding"><a href="https://github.com/aidistan" target="_blank" class="am-icon-btn am-icon-github am-black"></a></li>
-</ul>
-
-<hr/>
-
-<a href="https://github.com/aidistan/blog" target="_blank" class="github-corner">
+<a href="https://github.com/aidistan/site-blog.aiditan.me" target="_blank" class="github-corner">
   <svg width="80px" height="80px" viewBox="0 0 250 250" style="fill:#151513; color:#fff; position: absolute; top: 0; border: 0; right: 0;">
     <path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path>
     <path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path>
