--- a/about.html
+++ b/about.html
@@ -6,31 +6,39 @@ description: 也无风雨也无晴
 comments: page-about
 ---
 
-<style>
-  li .am-icon-btn {
-    font-size: 48px;
-    line-height: 72px;
-    width: 72px;
-    height: 72px;
-  }
-
-  .am-icon-btn.am-black {
-    color: #333;
-    background-color: #eee;
-  }
-</style>
-
 <p>
   <b>为什么会有这个博客？</b><br/>
   为了记录自己的所思、所想、所感，并与大家分享。
 </p>
 
+<p>
+  <b>有哪些更好的博客可以推荐？</b><br/>
+  <a href="http://www.geekonomics10000.com/" target="_blank">同人于野</a>,
+  <a href="http://www.yinwang.org/" target="_blank">王垠</a>,
+  <a href="https://www.scotthyoung.com/blog/" target="_blank">Scott H. Young</a>
+</p>
+
 <hr/>
 
 <ul class="am-avg-sm-3 am-text-center">
-  <li class="am-padding"><a href="/gallery/" class="am-icon-btn am-icon-paint-brush"></a></li>
-  <li class="am-padding"><a href="/notes/" class="am-icon-btn am-icon-pencil"></a></li>
+  <li class="am-padding"><a href="/feed.xml" class="am-icon-btn am-warning am-icon-rss"></a></li>
+  <li class="am-padding"><a href="/gallery/" class="am-icon-btn am-primary am-icon-paint-brush"></a></li>
+  <li class="am-padding"><a href="/notes/" class="am-icon-btn am-black am-icon-pencil"></a></li>
 </ul>
+
+<style>
+li .am-icon-btn {
+  font-size: 36px;
+  line-height: 72px;
+  width: 72px;
+  height: 72px;
+}
+
+.am-icon-btn.am-black {
+  color: #eee;
+  background-color: #333;
+}
+</style>
 
 <hr/>
 
@@ -43,16 +51,16 @@ comments: page-about
 </a>
 
 <style>
-  .github-corner:hover .octo-arm {
-    animation: octocat-wave 560ms ease-in-out;
-  }
-  @keyframes octocat-wave {
-    0%,  100% { transform:rotate(0); }
-    20%, 60%  { transform:rotate(-25deg); }
-    40%, 80%  { transform:rotate(10deg); }
-  }
-  @media (max-width:500px) {
-    .github-corner:hover .octo-arm { animation:none; }
-    .github-corner .octo-arm { animation: octocat-wave 560ms ease-in-out; }
-  }
+.github-corner:hover .octo-arm {
+  animation: octocat-wave 560ms ease-in-out;
+}
+@keyframes octocat-wave {
+  0%,  100% { transform:rotate(0); }
+  20%, 60%  { transform:rotate(-25deg); }
+  40%, 80%  { transform:rotate(10deg); }
+}
+@media (max-width:500px) {
+  .github-corner:hover .octo-arm { animation:none; }
+  .github-corner .octo-arm { animation: octocat-wave 560ms ease-in-out; }
+}
 </style>
