--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 layout: page
 title:
 description: 竹杖芒鞋轻胜马
-image:
-  feature: 2014/0911.jpg
+feature:
+  image: 2014/0911.jpg
   credit: Aidi Stan
 ---
 
