Remove gallery.html

--- a/about.html
+++ b/about.html
@@ -21,9 +21,9 @@ comments: page-about
 <hr/>
 
 <ul class="am-avg-sm-3 am-text-center">
-  <li class="am-padding"><a href="{{ site.baseurl }}/feed.xml" class="am-icon-btn am-warning am-icon-rss"></a></li>
-  <li class="am-padding"><a href="{{ site.baseurl }}/gallery/" class="am-icon-btn am-primary am-icon-paint-brush"></a></li>
+  <li class="am-padding"><a href="http://aiditan.me" class="am-icon-btn am-primary am-icon-home"></a></li>
   <li class="am-padding"><a href="{{ site.baseurl }}/notes/" class="am-icon-btn am-black am-icon-pencil"></a></li>
+  <li class="am-padding"><a href="{{ site.baseurl }}/feed.xml" class="am-icon-btn am-warning am-icon-rss"></a></li>
 </ul>
 
 <style>
